--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,10 @@ body{
 }
 
 .element{
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     display: flex;
-    width: 30px;
-    height: 30px;
+    width: 5px;
+    height: 5px;
 }
 
 .hovered{
